--- a/app/globals.css
+++ b/app/globals.css
@@ -73,8 +73,8 @@ body,
     @apply bg-background text-foreground;
   }
 }
-
+/* 
 ::selection {
-  background-color: #ffcc00; /* Highlight background color */
-  color: #000000; /* Highlight text color */
-}
+  background-color: #ffcc00; 
+  color: #000000;
+} */
